--- a/front/src/app/components/shared/nav/nav.component.html
+++ b/front/src/app/components/shared/nav/nav.component.html
@@ -4,12 +4,20 @@
       <span style="color: black; text-align: center;">Sis E-Commerce exp.</span>
     </a>
   </div>
-  <div class="navbar-collapse">
+  <div class="navbar-collapse align-items-baseline">
     <ul class="navbar-nav me-auto">
       <li class="nav-item">
         <form class="app-search d-none d-md-block d-lg-block">
           <input type="text" class="form-control" placeholder="Pesquisar" style="margin-left: 18px;">
         </form>
+      </li>
+    </ul>
+    <ul class="d-flex list-unstyled">
+      <li class="nav-item disabled">
+          <a class="nav-link waves-effect waves-dark btn btn-success me-2 text-white" href="#">Entrar</a>
+      </li>
+      <li class="nav-item">
+        <a class="btn btn-dark me-2 text-white nav-link waves-effect waves-dark" routerLink="/user/registrar" routerLinkActive="active">Registrar</a>
       </li>
     </ul>
   </div>
