--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div id="main-wrapper">
-  <app-nav></app-nav>
-  <app-menuLateral></app-menuLateral>
-  <app-footer></app-footer>
+  <header class="topbar">
+    <app-nav></app-nav>
+    <app-menuLateral></app-menuLateral>
+  </header>
+  <app-login></app-login>
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
