--- a/front/src/app/components/shared/nav/nav.component.html
+++ b/front/src/app/components/shared/nav/nav.component.html
@@ -14,7 +14,7 @@
     </ul>
     <ul class="d-flex list-unstyled">
       <li class="nav-item disabled">
-          <a class="nav-link waves-effect waves-dark btn btn-success me-2 text-white" href="#">Entrar</a>
+          <a class="nav-link waves-effect waves-dark btn btn-success me-2 text-white" routerLink="/user/entrar" routerLinkActive="active">Entrar</a>
       </li>
       <li class="nav-item">
         <a class="btn btn-dark me-2 text-white nav-link waves-effect waves-dark" routerLink="/user/registrar" routerLinkActive="active">Registrar</a>
