--- a/front/src/app/components/user/registrar/registrar.component.html
+++ b/front/src/app/components/user/registrar/registrar.component.html
@@ -1,38 +1,34 @@
-<app-nav></app-nav>
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <div class="card card-body">
-        <h4 class="card-title">Sample Basic Forms</h4>
-        <h5 class="card-subtitle"> Bootstrap Elements </h5>
-        <div class="row">
-          <div class="col-sm-12 col-xs-12">
-            <form>
-              <div class="form-group">
-                <label for="exampleInputEmail111" class="form-label">User Name</label>
-                <input type="text" class="form-control" id="exampleInputEmail111" placeholder="Enter Username">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail12" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail12" placeholder="Enter email">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword11" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword11" placeholder="Password">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword12" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword12" placeholder="Confirm Password">
-              </div>
-              <div class="form-group">
-                <div class="form-check mr-sm-2">
-                  <input type="checkbox" class="form-check-input" id="checkbox1" value="check">
-                  <label class="form-check-label" for="checkbox1">Remember Me</label>
+<div class="page-wrapper">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <div class="card card-body">
+          <h4 class="card-title">Cadastro de usuário</h4>
+          <div class="row">
+            <div class="col-sm-12 col-xs-12">
+              <form>
+                <div class="form-group">
+                  <label for="exampleInputEmail111" class="form-label">Primeiro nome</label>
+                  <input type="text" class="form-control" id="exampleInputEmail111" placeholder="Digite seu nome">
                 </div>
-              </div>
-              <button type="submit" class="btn btn-success me-2 text-white">Submit</button>
-              <button type="submit" class="btn btn-dark">Cancel</button>
-            </form>
+                <div class="form-group">
+                  <label for="exampleInputEmail12" class="form-label">Sobrenome</label>
+                  <input type="email" class="form-control" id="exampleInputEmail12" placeholder="Digite seu sobrenome">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword11" class="form-label">Senha</label>
+                  <input type="password" class="form-control" id="exampleInputPassword11"
+                    placeholder="Digite sua senha">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword12" class="form-label">Confirmar senha</label>
+                  <input type="password" class="form-control" id="exampleInputPassword12"
+                    placeholder="Confirme sua senha">
+                </div>
+                <button type="submit" class="btn btn-success me-2 text-white">Enviar</button>
+                <a type="submit" class="btn btn-dark">Cancelar</a>
+              </form>
+            </div>
           </div>
         </div>
       </div>
