--- a/front/src/app/components/user/registrar/registrar.component.html
+++ b/front/src/app/components/user/registrar/registrar.component.html
@@ -12,33 +12,43 @@
             <div class="col-sm-12 col-xs-12">
               <form [formGroup]="form" (ngSubmit)="register()">
                 <div class="form-group">
-                  <label for="primeiroNome" class="form-label" formControlName="primeiroNome">Primeiro nome</label>
-                  <input type="text" class="form-control" id="primeiroNome" placeholder="Digite seu nome" [ngClass]="{'is-invalid': f.primeiroNome.errors && f.primeiroNome.touched}">
+                  <label for="primeiroNome" class="form-label">Primeiro nome</label>
+                  <input type="text" class="form-control" formControlName="primeiroNome" id="primeiroNome" placeholder="Digite seu nome" [ngClass]="{'is-invalid': f.primeiroNome.errors && f.primeiroNome.touched}">
                   <div class="invalid-feedback">
                     Primeiro Nome é obrigatório.
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="ultimoNome" class="form-label" formControlName="ultimoNome">Sobrenome</label>
-                  <input type="text" class="form-control" id="ultimoNome" placeholder="Digite seu sobrenome">
+                  <label for="ultimoNome" class="form-label">Sobrenome</label>
+                  <input type="text" class="form-control" formControlName="ultimoNome" id="ultimoNome" placeholder="Digite seu sobrenome" [ngClass]="{'is-invalid': f.ultimoNome.errors && f.ultimoNome.touched}">
+                  <div class="invalid-feedback">
+                    Último Nome é obrigatório.
+                  </div>
                 </div>
                 <div class="form-group">
-                  <label for="email" class="form-label" formControlName="email">E-mail</label>
-                  <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail">
+                  <label for="email" class="form-label">E-mail</label>
+                  <input type="email" class="form-control" formControlName="email" id="email" placeholder="Digite seu e-mail" [ngClass]="{'is-invalid': f.email.errors && f.email.touched}">
+                  <div class="invalid-feedback">
+                    E-mail é obrigatório.
+                  </div>
                 </div>
                 <div class="form-group">
-                  <label for="username" class="form-label" formControlName="username">Nome de usuário</label>
-                  <input type="text" class="form-control" id="username" placeholder="Digite seu nome de usuário">
+                  <label for="username" class="form-label">Nome de usuário</label>
+                  <input type="text" class="form-control" formControlName="username" id="username" placeholder="Digite seu nome de usuário" [ngClass]="{'is-invalid': f.username.errors && f.username.touched}">
+                  <div class="invalid-feedback">
+                    Nome de usuário é obrigatório.
+                  </div>
                 </div>
                 <div class="form-group">
-                  <label for="password" class="form-label" formControlName="password">Senha</label>
-                  <input type="password" class="form-control" id="password"
-                    placeholder="Digite sua senha">
+                  <label for="password" class="form-label">Senha</label>
+                  <input type="password" class="form-control" formControlName="password" id="password" placeholder="Digite sua senha" [ngClass]="{'is-invalid': f.password.errors && f.password.touched}">
+                  <div class="invalid-feedback">
+                    Senha é obrigatório.
+                  </div>
                 </div>
                 <div class="form-group">
-                  <label for="confirmarSenha" class="form-label" formControlName="confirmarSenha">Confirmar senha</label>
-                  <input type="password" class="form-control" id="confirmarSenha"
-                    placeholder="Confirme sua senha">
+                  <label for="confirmarSenha" class="form-label">Confirmar senha</label>
+                  <input type="password" class="form-control" formControlName="confirmarSenha" id="confirmarSenha" placeholder="Confirme sua senha">
                 </div>
                 <button type="submit" class="btn btn-success me-2 text-white" type="submit" [disabled]="form.disabled">Cadastrar</button>
                 <a type="submit" class="btn btn-dark">Cancelar</a>
