--- a/front/src/app/components/shared/menuLateral/menuLateral.component.html
+++ b/front/src/app/components/shared/menuLateral/menuLateral.component.html
@@ -3,9 +3,9 @@
     <div class="user-profile">
       <div class="user-pro-body">
         <div><img src="../assets/images/114532361.jpg" alt="user-img" class="img-circle"></div>
-        <div class="dropdown">
+        <div class="dropdown" *ngIf="(userService.currentUser$ | async) as user">
           <a href="javascript:void(0)" class="dropdown-toggle u-dropdown link hide-menu" data-bs-toggle="dropdown"
-            role="button" aria-haspopup="true" aria-expanded="false">Nicolas Silva<span class="caret"></span></a>
+            role="button" aria-haspopup="true" aria-expanded="false">{{ user.primeiroNome | titlecase }}<span class="caret">{{ user.username | titlecase }}</span></a>
           <div class="dropdown-menu animated flipInY">
             <a href="javascript:void(0)" class="dropdown-item"> Perfil</a>
             <a href="javascript:void(0)" class="dropdown-item"> Configurações</a>
@@ -28,7 +28,7 @@
         </li>
         <li>
           <a class="waves-effect waves-dark" aria-expanded="false">
-            <span class="hide-menu">Sair</span>
+            <span class="hide-menu" (click)="logout()">Sair</span>
           </a>
         </li>
       </ul>
