--- a/front/src/app/components/shared/nav/nav.component.html
+++ b/front/src/app/components/shared/nav/nav.component.html
@@ -1,5 +1,4 @@
 <nav class="navbar top-navbar navbar-expand-md navbar-dark">
-
   <div class="navbar-collapse align-items-baseline">
     <ul class="navbar-nav me-auto">
       <li class="nav-item">
@@ -8,7 +7,7 @@
         </form>
       </li>
     </ul>
-    <ul class="d-flex list-unstyled">
+    <ul class="d-flex list-unstyled" *ngIf="(userService.currentUser$ | async) === null">
       <li class="nav-item disabled">
           <a class="nav-link waves-effect waves-dark btn btn-success me-2 text-white" routerLink="/user/entrar" routerLinkActive="active">Entrar</a>
       </li>
