--- a/front/src/app/components/cardsprodutos/cardsprodutos.component.html
+++ b/front/src/app/components/cardsprodutos/cardsprodutos.component.html
@@ -1,5 +1,5 @@
 
-<app-menuLateral *ngIf="(userSerivce.currentUser$ | async) != null"></app-menuLateral>
+<app-menuLateral *ngIf="(accountService.currentUser$ | async) != null"></app-menuLateral>
 <div class="page-wrapper">
   <div class="container-fluid">
     <div class="row page-titles">
