--- a/front/src/app/components/user/login/login.component.html
+++ b/front/src/app/components/user/login/login.component.html
@@ -1,34 +1,38 @@
-<<div class="page-wrapper">
+<div class="page-wrapper">
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
         <div class="card">
           <div class="card-body">
             <h4 class="card-title">Entrar com</h4>
-            <form #loginForm="ngForm" class="mt-4" (ngSubmit)="login()">
+            <form [formGroup]="form" class="mt-4" (ngSubmit)="login()">
               <div class="form-group">
                 <label for="exampleInputEmail1" class="form-label">E-mail</label>
                 <input
-                  [(ngModel)]="model.email"
-                  [ngModelOptions]="{ standalone: true }"
+                  formControlName="email"
                   type="email"
                   class="form-control"
                   id="email"
                   aria-describedby="emailHelp"
-                  placeholder="entre com seu e-mail email">
+                  placeholder="entre com seu e-mail email" [ngClass]="{'is-invalid': f.email.errors && f.email.touched}">
+                  <div class="invalid-feedback">
+                    E=mail é obrigatório.
+                  </div>
                 <small id="emailHelp" class="form-text text-muted">Nós não compartilharemos o seu email com ninguém.</small>
               </div>
               <div class="form-group">
                 <label for="exampleInputPassword1" class="form-label">Senha</label>
                 <input
-                  [(ngModel)]="model.password"
-                  [ngModelOptions]="{ standalone: true }"
+                formControlName="password"
                   type="password"
                   class="form-control"
                   id="password"
-                  placeholder="Digite sua senha">
+                  placeholder="Digite sua senha" [ngClass]="{'is-invalid': f.password.errors && f.password.touched}">
+                  <div class="invalid-feedback">
+                    Senha é obrigatório.
+                  </div>
               </div>
-              <button type="submit" class="btn btn-success text-white" style="margin-right: 12px;" [disabled]="loginForm.disabled">Entrar</button>
+              <button type="submit" class="btn btn-success text-white" style="margin-right: 12px;" [disabled]="form.disabled">Entrar</button>
               <button type="submit" class="btn btn-dark text-white">Cancelar</button>
             </form>
           </div>
@@ -37,4 +41,4 @@
     </div>
   </div>
 </div>
->
+
