--- a/front/src/app/components/shared/nav/nav.component.html
+++ b/front/src/app/components/shared/nav/nav.component.html
@@ -7,7 +7,7 @@
         </form>
       </li>
     </ul>
-    <ul class="d-flex list-unstyled" *ngIf="(accountService.currentUser$ | async) === null">
+    <ul class="d-flex list-unstyled" *ngIf="(accountService.currentUser$ | async) == null">
       <li class="nav-item disabled">
           <a class="nav-link waves-effect waves-dark btn btn-success me-2 text-white" routerLink="/user/entrar" routerLinkActive="active">Entrar</a>
       </li>
