--- a/front/src/app/components/cardsprodutos/cardsprodutos.component.html
+++ b/front/src/app/components/cardsprodutos/cardsprodutos.component.html
@@ -1,4 +1,3 @@
-
 <app-menuLateral *ngIf="(accountService.currentUser$ | async) != null"></app-menuLateral>
 <div class="page-wrapper">
   <div class="container-fluid">
@@ -12,52 +11,20 @@
         <div id="code1" class="collapse">
           <div class="highlight">
             <pre class="language-html scrollable">
-<code><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"card"</span> <span class="na">style=</span><span class="s">"width: 20rem;"</span><span class="nt">&gt;</span>
-<span class="nt">&lt;img</span> <span class="na">class=</span><span class="s">"card-img-top"</span> <span class="na">src=</span><span class="s">"..."</span> <span class="na">alt=</span><span class="s">"Card image cap"</span><span class="nt">&gt;</span>
-<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"card-body"</span><span class="nt">&gt;</span>
-<span class="nt">&lt;h4</span> <span class="na">class=</span><span class="s">"card-title"</span><span class="nt">&gt;</span>Card title<span class="nt">&lt;/h4&gt;</span>
-<span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"card-text"</span><span class="nt">&gt;</span>Some quick example text to build on the card title and make up the bulk of the card's content.<span class="nt">&lt;/p&gt;</span>
-<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"btn btn-primary"</span><span class="nt">&gt;</span>Go somewhere<span class="nt">&lt;/a&gt;</span>
-<span class="nt">&lt;/div&gt;</span>
-<span class="nt">&lt;/div&gt;</span></code>
-</pre>
+              <code><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"card"</span> <span class="na">style=</span><span class="s">"width: 20rem;"</span><span class="nt">&gt;</span>
+              <span class="nt">&lt;img</span> <span class="na">class=</span><span class="s">"card-img-top"</span> <span class="na">src=</span><span class="s">"..."</span> <span class="na">alt=</span><span class="s">"Card image cap"</span><span class="nt">&gt;</span>
+              <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"card-body"</span><span class="nt">&gt;</span>
+              <span class="nt">&lt;h4</span> <span class="na">class=</span><span class="s">"card-title"</span><span class="nt">&gt;</span>Card title<span class="nt">&lt;/h4&gt;</span>
+              <span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"card-text"</span><span class="nt">&gt;</span>Some quick example text to build on the card title and make up the bulk of the card's content.<span class="nt">&lt;/p&gt;</span>
+              <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"btn btn-primary"</span><span class="nt">&gt;</span>Go somewhere<span class="nt">&lt;/a&gt;</span>
+              <span class="nt">&lt;/div&gt;</span>
+              <span class="nt">&lt;/div&gt;</span></code>
+            </pre>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6 mb-5">
-            <div class="card h-100">
-              <img class="card-img-top img-responsive" src="../assets/images/big/tv.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h4 class="card-title">Iphone</h4>
-                <p class="card-text">Teste</p>
-                <a href="javascript:void(0)" class="btn btn-primary text-white">Comprar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-5">
-            <div class="card h-100">
-              <img class="card-img-top img-responsive" src="../assets/images/big/img2.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="javascript:void(0)" class="btn btn-primary text-white">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-5">
-            <div class="card h-100">
-              <img class="card-img-top img-responsive" src="../assets/images/big/img3.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="javascript:void(0)" class="btn btn-primary text-white">Go somewhere</a>
-              </div>
-            </div>
-          </div>
+        <div class="row" *ngFor="let produto of produtos">
+          <app-card-product-item [produto]="produto"></app-card-product-item>
         </div>
-
       </div>
     </div>
   </div>
