--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,9 @@
-<div id="main-wrapper">
-  <header class="topbar">
-    <app-nav></app-nav>
-  </header>
-  <router-outlet></router-outlet>
-</div>
+<header class="topbar">
+  <app-nav></app-nav>
+</header>
+
+<router-outlet></router-outlet>
+
+<app-menuLateral></app-menuLateral>
+
+<app-footer></app-footer>
