--- a/front/src/app/components/user/login/login.component.html
+++ b/front/src/app/components/user/login/login.component.html
@@ -1,5 +1,10 @@
 <div class="page-wrapper">
   <div class="container-fluid">
+    <div class="row page-titles" style="padding: 1.3em;">
+      <div class="col-md-5 align-self-center">
+        <h4 class="text-themecolor">Entrar</h4>
+      </div>
+    </div>
     <div class="row">
       <div class="col-12">
         <div class="card">
