--- a/front/src/app/components/cardsprodutos/cardsprodutos.component.html
+++ b/front/src/app/components/cardsprodutos/cardsprodutos.component.html
@@ -1,4 +1,3 @@
-<app-menuLateral *ngIf="(accountService.currentUser$ | async) != null"></app-menuLateral>
 <div class="page-wrapper">
   <div class="container-fluid">
     <div class="row page-titles">
@@ -22,9 +21,7 @@
             </pre>
           </div>
         </div>
-        <div class="row" *ngFor="let produto of produtos">
-          <app-card-product-item [produto]="produto"></app-card-product-item>
-        </div>
+          <app-card-product-item></app-card-product-item>
       </div>
     </div>
   </div>
